--- a/conf/zoo.cfg
+++ b/conf/zoo.cfg
@@ -9,9 +9,7 @@ initLimit=10
 # sending a request and getting an acknowledgement
 syncLimit=5
 # the directory where the snapshot is stored.
-dataDir=/var/lib/zookeeper
-# Place the dataLogDir to a separate physical disc for better performance
-# dataLogDir=/disk2/zookeeper
+dataDir=/zookeeper/data
 
 # the port at which the clients will connect
 clientPort=2181
