--- a/zookeeper@.service
+++ b/zookeeper@.service
@@ -1,17 +1,19 @@
 [Unit]
 Description=zookeeper
-After=skydns.service
-Requires=skydns.service
+After=skydns2.service
+Requires=skydns2.service
 
 [Service]
 EnvironmentFile=/etc/environment
 Environment="DOMAIN_NAME=cluster.duffqiu.org"
+ExecStartPre=/usr/bin/docker pull  duffqiu/zk-fleet:latest
 ExecStart=/usr/bin/docker run --rm \
                               --name zookeeper-%i \
                               -e ZK_SERVER_ID=%i \
                               --hostname zookeeper-%i.${DOMAIN_NAME} \
                               --dns-search ${DOMAIN_NAME} \
                               -p ${COREOS_PRIVATE_IPV4}:2181:2181 \
+                              -v /home/core/vdb/zk/data:/zookeeper/data \
                               duffqiu/zk-fleet:latest
 
 ExecStop=/usr/bin/docker stop zookeeper-%i
