run, but zookeeper doesn't work with dns

--- a/zk-presence@.service
+++ b/zk-presence@.service
@@ -6,11 +6,16 @@ After=zookeeper@%i.service
 [Service]
 Restart=always
 RestartSec=30
-
 EnvironmentFile=/etc/environment
 Environment="ZOOKEEPER_CLIENT_PORT=2181"
+Environment="ZOOKEEPER_LEADER_PORT=2888"
+Environment="ZOOKEEPER_LEADER_ELECTION_PORT=3888"
 ExecStartPre=/usr/bin/etcdctl set --ttl 60 /skydns/org/duffqiu/cluster/zookeeper-%i '{"host":"${COREOS_PRIVATE_IPV4}","port":${ZOOKEEPER_CLIENT_PORT}}'
-ExecStart=/usr/bin/echo "Set zookeeper-%i in skydns2"
+ExecStartPre=/usr/bin/etcdctl set --ttl 60 /skydns/org/duffqiu/cluster/zookeeper/%i '{"host":"${COREOS_PRIVATE_IPV4}","port":${ZOOKEEPER_CLIENT_PORT}}'
+ExecStartPre=/usr/bin/etcdctl set --ttl 60 /skydns/org/duffqiu/cluster/_tcp/_zookeeper/%i '{"host":"${COREOS_PRIVATE_IPV4}","port":${ZOOKEEPER_CLIENT_PORT}}'
+ExecStartPre=/usr/bin/etcdctl set --ttl 60 /skydns/org/duffqiu/cluster/_tcp/_zookeeper-leader/%i '{"host":"${COREOS_PRIVATE_IPV4}","port":${ZOOKEEPER_LEADER_PORT}}'
+ExecStartPre=/usr/bin/etcdctl set --ttl 60 /skydns/org/duffqiu/cluster/_tcp/_zookeeper-election/%i '{"host":"${COREOS_PRIVATE_IPV4}","port":${ZOOKEEPER_LEADER_ELECTION_PORT}}'
+ExecStart=/bin/sh -C "echo Set zookeeper-%i in skydns2"
 
 [X-Fleet]
 MachineOf=zookeeper@%i.service
