--- a/zookeeper@.service
+++ b/zookeeper@.service
@@ -4,9 +4,13 @@ After=skydns2.service
 Requires=skydns2.service
 
 [Service]
+Restart=on-failure
+RestartSec=180
 EnvironmentFile=/etc/environment
 Environment="DOMAIN_NAME=cluster.duffqiu.org"
 ExecStartPre=/usr/bin/docker pull  duffqiu/zk-fleet:latest
+ExecStartPre=-/usr/bin/docker kill zookeeper-%i
+ExecStartPre=-/usr/bin/docker rm  zookeeper-%i
 ExecStart=/usr/bin/docker run --rm \
                               --name zookeeper-%i \
                               -e ZK_SERVER_ID=%i \
@@ -18,7 +22,7 @@ ExecStart=/usr/bin/docker run --rm \
                               -p ${COREOS_PRIVATE_IPV4}:3888:3888 \
                               -v /home/core/vdb/zk/data:/zookeeper/data \
                               duffqiu/zk-fleet:latest
-ExecStop=/usr/bin/docker stop zookeeper-%i
+ExecStop=-/usr/bin/docker stop zookeeper-%i
 
 [X-Fleet]
 X-Conflicts=zookeeper@*.service
