--- a/zookeeper@.service
+++ b/zookeeper@.service
@@ -5,16 +5,13 @@ Requires=skydns2.service
 
 [Service]
 Restart=on-failure
-RestartSec=180
+RestartSec=600
 EnvironmentFile=/etc/environment
 Environment="DOMAIN_NAME=cluster.duffqiu.org"
 ExecStartPre=-/usr/bin/docker kill zookeeper-%i
 ExecStartPre=-/usr/bin/docker rm  zookeeper-%i
 ExecStartPre==/usr/bin/docker pull duffqiu/zk-fleet:latest
-ExecStartPre=/usr/bin/etcdctl set /skydns/org/duffqiu/cluster/zookeeper-1 '{"host":"${COREOS_PRIVATE_IPV4}","port":${ZOOKEEPER_CLIENT_PORT}}'
-ExecStartPre=/usr/bin/etcdctl set /skydns/org/duffqiu/cluster/zookeeper-2 '{"host":"${COREOS_PRIVATE_IPV4}","port":${ZOOKEEPER_CLIENT_PORT}}'
-ExecStartPre=/usr/bin/etcdctl set /skydns/org/duffqiu/cluster/zookeeper-3 '{"host":"${COREOS_PRIVATE_IPV4}","port":${ZOOKEEPER_CLIENT_PORT}}'
-ExecStart=/usr/bin/docker run --rm \
+ExecStart=/usr/bin/docker run  \
                               --name zookeeper-%i \
                               -e ZK_SERVER_ID=%i \
                               --hostname zookeeper-%i.${DOMAIN_NAME} \
