--- a/zookeeper@.service
+++ b/zookeeper@.service
@@ -2,6 +2,7 @@
 Description=zookeeper service unit
 After=skydns2.service
 Requires=skydns2.service
+Wants=zk-presence@%i.service
 
 [Service]
 Restart=on-failure
